2000-4-26	Alexandra Ellwood <lxs@mit.edu>

	* ccdefault.c: Added version number to internal Kerberos Login Library 
	routine.

2000-4-13	Alexandra Ellwood <lxs@mit.edu>

	* ccdefault.c: Added Kerberos Login library support (with ifdefs to control 
	whether or not it is on.  Also added support to store a krb5_principal in the
	os_context along with the default ccache name (if known, this principal is 
	the same as the last time we looked at the ccache.
	* ccdefname.c: Added support to store a krb5_principal in the os_context 
	along with the default ccache name (if known, this principal is the same 
	as the last time we looked at the ccache.

1999-10-26  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Clean up usage of CFLAGS, CPPFLAGS, DEFS, DEFINES,
	LOCAL_INCLUDES such that one can override CFLAGS from the command
	line without losing CPP search patchs and defines. Some associated
	Makefile cleanup. [from wsanchez@apple.com]

1999-08-23  Ken Raeburn  <raeburn@mit.edu>

	* cc_retr.c: New file.
	(krb5_cc_retrieve_cred_seq): New function, derived from
	fcc_retrieve but takes an optional list of enctypes to look for in
	priority order.
	(krb5_cc_retrieve_cred_default): New function.  Same signature as
	original fcc_retrieve but if new flag KRB5_TC_SUPPORTED_KTYPES is
	set, calls krb5_get_tgs_ktypes to get a list of enctypes to look
	for.
	* Makefile.in (STLIBOBJS, OBJS, SRCS): Add it.

Tue May 18 19:52:56 1999  Danilo Almeida  <dalmeida@mit.edu>

	* Makefile.in: Remove - from recursive Win32 make invocation.

Mon May 17 14:11:45 1999  Danilo Almeida  <dalmeida@mit.edu>

	* Makefile.in: Clean ccapi subdirectory in clean-windows target.

Mon May 10 15:24:08 1999  Danilo Almeida  <dalmeida@mit.edu>

	* Makefile.in: Do win32 build in subdir.

1999-03-31  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* ccdefops.c: Change the default ccache type under windows to be
		original FILE ccache type; this will get set to ccapi if
		the krbcc32.dll can be found.
