@@ -1,3 +1,12 @@
+2000-5-19	Alexandra Ellwood <lxs@mit.edu>
+
+	* ccdefault.c: Added krb5int_cc_default.  This function 
+	supports the Kerberos Login Library and pops up a dialog if the cache does 
+	not contain valid tickets.  This is used to automatically get a tgt before
+	obtaining service tickets.  Note that this should be an internal function
+	because callers don't expect krb5_cc_default to pop up a dialog!
+	(We found this out the hard way :-)
+
 2000-4-26	Alexandra Ellwood <lxs@mit.edu>
 
 	* ccdefault.c: Added version number to internal Kerberos Login Library 
